--- a/themes/未实现/火箭返回顶部/css/zzsc.css
+++ b/themes/未实现/火箭返回顶部/css/zzsc.css
@@ -10,7 +10,7 @@ body{height:3000px;}
     width: 149px;
 }
 #rocket-to-top .level-2 {
-    background: url("/images/rocket_button_up.png") no-repeat scroll -149px 0 transparent;
+    background: url("../images/rocket_button_up.png") no-repeat scroll -149px 0 transparent;
     display: none;
     height: 250px;
     opacity: 0;
@@ -24,7 +24,7 @@ body{height:3000px;}
     z-index: 2;
 }
 #rocket-to-top {
-    background: url("/images/rocket_button_up.png") no-repeat scroll 0 0 transparent;
+    background: url("../images/rocket_button_up.png") no-repeat scroll 0 0 transparent;
     cursor: default;
     display: block;
     height: 250px;
