--- a/themes/next5.1/source/css/_custom/custom.styl
+++ b/themes/next5.1/source/css/_custom/custom.styl
@@ -1,6 +1,25 @@
-// Custom styles.
+// Custom styles.  用户自定义样式设置文件
+
+
+//背景透明
 //.content-wrap {background: transparent;}
 
+
+
+//超链接样式
+.post-body p a {
+  color: #0593d3;
+  border-bottom: none;
+  &:hover {
+    color: #ff79bc;
+    text-decoration: underline;
+  }
+}
+
+
+
+
+//返回顶部按钮样式
 .back-to-top {
   box-sizing: border-box;
   position: fixed;
