--- a/themes/next5.0.1/source/css/_custom/custom.styl
+++ b/themes/next5.0.1/source/css/_custom/custom.styl
@@ -22,6 +22,7 @@
   position: fixed;
   bottom: $b2t-position-bottom;
   right: $b2t-position-right;
+  //left: $b2t-position-left;
   z-index: $zindex-5;
   padding: 0 6px;
   width: 25px;
